# Kira

./: CMakeLists.txt
arduino/controller/: CONFIG.hpp  Controller.cpp  Controller.hpp  I2C.cpp  I2C.hpp  Utils.cpp  Utils.hpp  controller.ino
arduino/extras/: CONFIG.hpp  I2C.cpp  extras.ino
includes/: Controller.hpp  I2C_Interface.hpp  Inspector.h  MainMenuBar.h  Odometry.hpp  UIManager.h  Utils.hpp
src/: Controller.cpp  I2C_Interface.cpp  Odometry.cpp  main.cpp
src/ui/: Inspector.cpp  UIManager.cpp
